--- a/admin.html
+++ b/admin.html
@@ -3,139 +3,153 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>🛠️ Admin - จัดการสินค้า</title>
+<title>🛠️ Admin - ร้านขนมจีน</title>
 
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 <script src="https://cdn.tailwindcss.com"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 
-<body class="bg-slate-900 text-white p-4">
+<body class="bg-slate-900 text-white p-4 space-y-6">
 
-<h1 class="text-xl font-bold mb-4">🛠️ จัดการสินค้า</h1>
+<h1 class="text-xl font-bold">🛠️ Admin ร้านขนมจีน</h1>
 
-<!-- เพิ่มสินค้า -->
-<div class="bg-slate-800 p-3 rounded mb-4">
-  <h2 class="font-bold mb-2">➕ เพิ่มสินค้า</h2>
+<!-- ================== จัดการโต๊ะ ================== -->
+<div class="bg-slate-800 p-4 rounded">
+  <h2 class="font-bold mb-2">🪑 จัดการโต๊ะ</h2>
 
-  <input id="pName" placeholder="ชื่อสินค้า"
-    class="w-full p-2 mb-2 text-black rounded">
+  <div class="flex gap-2 mb-3">
+    <input id="tName" placeholder="ชื่อโต๊ะ"
+      class="flex-1 p-2 text-black rounded">
+    <button onclick="addTable()" class="bg-emerald-600 px-4 rounded">
+      เพิ่มโต๊ะ
+    </button>
+  </div>
 
-  <select id="pCategory" class="w-full p-2 mb-2 text-black rounded">
-    <option value="ขนมจีน">ขนมจีน</option>
-    <option value="น้ำ">น้ำ</option>
-    <option value="ทานเล่น">ทานเล่น</option>
-  </select>
-
-  <input id="pPrice" type="number" placeholder="ราคา"
-    class="w-full p-2 mb-2 text-black rounded">
-
-  <button onclick="addProduct()" class="bg-emerald-600 w-full py-2 rounded">
-    เพิ่มสินค้า
-  </button>
+  <table class="w-full text-sm">
+    <thead>
+      <tr class="border-b border-slate-600">
+        <th class="text-left">โต๊ะ</th>
+        <th class="text-center">ใช้งาน</th>
+        <th class="text-center">ลบ</th>
+      </tr>
+    </thead>
+    <tbody id="tableList"></tbody>
+  </table>
 </div>
 
-<!-- ตารางสินค้า -->
-<table class="w-full text-sm border-collapse">
-  <thead>
-    <tr class="border-b border-slate-600">
-      <th class="text-left py-1">สินค้า</th>
-      <th class="text-center">ราคา</th>
-      <th class="text-center">ขาย</th>
-      <th class="text-center">จัดการ</th>
-    </tr>
-  </thead>
-  <tbody id="list"></tbody>
-</table>
+<!-- ================== ดูบิลตามโต๊ะ ================== -->
+<div class="bg-slate-800 p-4 rounded">
+  <h2 class="font-bold mb-2">🧾 ดูบิลตามโต๊ะ</h2>
+
+  <select id="tableSelect"
+    class="w-full p-2 mb-3 text-black rounded"
+    onchange="loadBillsByTable()">
+    <option value="">-- เลือกโต๊ะ --</option>
+  </select>
+
+  <div id="billBox" class="text-sm space-y-2"></div>
+</div>
 
 <script>
 const SUPABASE_URL = "https://nvsptbbvxjulrpdebrhn.supabase.co";
 const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im52c3B0YmJ2eGp1bHJwZGVicmhuIiwicm9sZSI6ImFub24iLCJpYXQiOjE3Njc2MTc1NTAsImV4cCI6MjA4MzE5MzU1MH0.sQ8XqdAKCsaxWupP3QZjFOraEHyW8agSo3c3BR3I8ss";
 const db = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
-/* โหลดสินค้า */
-async function loadProducts() {
-  const { data } = await db
-    .from('products')
-    .select('*')
-    .order('category');
+/* ================= TABLE ================= */
+async function loadTables() {
+  const { data } = await db.from('tables').select('*').order('name');
+  tableList.innerHTML = '';
+  tableSelect.innerHTML = '<option value="">-- เลือกโต๊ะ --</option>';
 
-  list.innerHTML = '';
-
-  data.forEach(p => {
-    const tr = document.createElement('tr');
-    tr.className = 'border-b border-slate-700';
-
-    tr.innerHTML = `
-      <td class="py-1">${p.name}</td>
-
-      <td class="text-center">
-        <input type="number" value="${p.price}"
-          class="w-20 text-black p-1 rounded text-center"
-          onchange="updatePrice('${p.id}', this.value)">
-      </td>
-
-      <td class="text-center">
-        <input type="checkbox" ${p.active ? 'checked' : ''}
-          onchange="toggleActive('${p.id}', this.checked)">
-      </td>
-
-      <td class="text-center">
-        <button
-          onclick="deleteProduct('${p.id}', '${p.name}')"
-          class="bg-red-600 px-2 py-1 rounded text-xs">
-          ลบ
-        </button>
-      </td>
+  data.forEach(t => {
+    // list
+    tableList.innerHTML += `
+      <tr class="border-b border-slate-700">
+        <td>${t.name}</td>
+        <td class="text-center">
+          <input type="checkbox" ${t.active ? 'checked' : ''}
+            onchange="toggleTable('${t.id}', this.checked)">
+        </td>
+        <td class="text-center">
+          <button onclick="deleteTable('${t.id}','${t.name}')"
+            class="bg-red-600 px-2 py-1 rounded text-xs">
+            ลบ
+          </button>
+        </td>
+      </tr>
     `;
 
-    list.appendChild(tr);
+    // select
+    if (t.active) {
+      tableSelect.innerHTML += `<option value="${t.id}">${t.name}</option>`;
+    }
   });
 }
 
-/* เพิ่มสินค้า */
-async function addProduct() {
-  if (!pName.value || !pPrice.value) {
-    alert('กรอกข้อมูลให้ครบ');
-    return;
-  }
+async function addTable() {
+  if (!tName.value) return alert('กรอกชื่อโต๊ะ');
 
-  await db.from('products').insert({
-    name: pName.value,
-    category: pCategory.value,
-    price: Number(pPrice.value),
+  await db.from('tables').insert({
+    name: tName.value,
     active: true
   });
 
-  pName.value = '';
-  pPrice.value = '';
-  loadProducts();
+  tName.value = '';
+  loadTables();
 }
 
-/* แก้ราคา */
-async function updatePrice(id, price) {
-  if (price <= 0) {
-    alert('ราคาต้องมากกว่า 0');
-    loadProducts();
+async function toggleTable(id, active) {
+  await db.from('tables').update({ active }).eq('id', id);
+  loadTables();
+}
+
+async function deleteTable(id, name) {
+  if (!confirm(`ลบโต๊ะ ${name} ?`)) return;
+  await db.from('tables').delete().eq('id', id);
+  loadTables();
+}
+
+/* ================= BILLS ================= */
+async function loadBillsByTable() {
+  const tableId = tableSelect.value;
+  billBox.innerHTML = '';
+
+  if (!tableId) return;
+
+  const { data: orders } = await db
+    .from('orders')
+    .select('*')
+    .eq('table_id', tableId)
+    .order('created_at', { ascending: false })
+    .limit(5);
+
+  if (!orders.length) {
+    billBox.innerHTML = '<div class="opacity-60">ยังไม่มีบิล</div>';
     return;
   }
 
-  await db.from('products').update({ price: Number(price) }).eq('id', id);
+  for (const o of orders) {
+    const { data: items } = await db
+      .from('order_items')
+      .select('*')
+      .eq('order_id', o.id);
+
+    billBox.innerHTML += `
+      <div class="border border-slate-600 p-2 rounded">
+        <div class="font-bold">
+          ยอด ${o.total} บาท (${o.payment})
+        </div>
+        ${items.map(i => `
+          <div>- ${i.product_name} (${i.price})</div>
+        `).join('')}
+      </div>
+    `;
+  }
 }
 
-/* เปิด / ปิดขาย */
-async function toggleActive(id, active) {
-  await db.from('products').update({ active }).eq('id', id);
-}
-
-/* ลบสินค้า */
-async function deleteProduct(id, name) {
-  if (!confirm(`ต้องการลบสินค้า "${name}" ใช่หรือไม่?`)) return;
-
-  await db.from('products').delete().eq('id', id);
-  loadProducts();
-}
-
-loadProducts();
+/* ================= START ================= */
+loadTables();
 </script>
 
 </body>
